--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '[3.4,4.0)'
-    compile group: 'commons-logging', name: 'commons-logging', version: '[1.1,2.0)'
+    compile group: 'org.apache.commons', name: 'commons-text', version: '[1.2,2.0)'
+    compile group: 'commons-logging', name: 'commons-logging', version: '[1.2,2.0)'
     compile group: 'org.javassist', name: 'javassist', version: '[3.0,4.0)'
+    
     testCompile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '[2.1.1,3.0)'
     testCompile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '[2.4,3.0)'
     testCompile group: 'junit', name: 'junit', version: '[4.12,)'
@@ -128,33 +129,33 @@ uploadArchives {
             }
 
             pom.project {
-                 name projectTitle
-                 packaging 'jar'
-                 description 'Helper for build generator to implement class logic in runtime basing on interface/methods/annotations'
-                 url 'https://github.com/xBlackCat/sjpu-rcb'
+                name projectTitle
+                packaging 'jar'
+                description 'Helper for build generator to implement class logic in runtime basing on interface/methods/annotations'
+                url 'https://github.com/xBlackCat/sjpu-rcb'
 
-                 scm {
-                     url 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
-                     connection 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
-                     developerConnection 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
-                 }
+                scm {
+                    url 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
+                    connection 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
+                    developerConnection 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
+                }
 
-                 licenses {
-                     license {
-                         name 'The Apache Software License, Version 2.0'
-                         url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                         distribution 'repo'
-                     }
-                 }
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
+                }
 
-                 developers {
-                     developer {
-                         id 'xBlackCat'
-                         name 'Zhukov Alexei'
-                         email 'xblackcat@gmail.com'
-                     }
-                 }
-             }
+                developers {
+                    developer {
+                        id 'xBlackCat'
+                        name 'Zhukov Alexei'
+                        email 'xblackcat@gmail.com'
+                    }
+                }
+            }
 
         }
     }
