--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'java-library'
+apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 sourceCompatibility = 1.8
@@ -30,17 +30,18 @@ tasks.withType(JavaCompile) {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-text', version: '[1.2,2.0)'
-    compile group: 'commons-logging', name: 'commons-logging', version: '[1.2,2.0)'
-    compile group: 'org.javassist', name: 'javassist', version: '[3.0,4.0)'
-    
-    testCompile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '[2.1.1,3.0)'
-    testCompile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '[2.4,3.0)'
-    testCompile group: 'junit', name: 'junit', version: '[4.12,)'
+    api group: 'org.apache.commons', name: 'commons-text', version: '[1.9,2.0)'
+    api group: 'commons-logging', name: 'commons-logging', version: '[1.2,2.0)'
+    api group: 'org.javassist', name: 'javassist', version: '[3.29.0-GA,4.0)'
+
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '[2.18.0,3.0)'
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '[2.18.0,3.0)'
+    testImplementation group: 'junit', name: 'junit', version: '[4.12,)'
 }
 
 task sourcesJar(type: Jar) {
@@ -79,7 +80,7 @@ task sourcesZip(type: Zip) {
     include 'build.*'
     include 'LICENSE'
     into('lib') {
-        from configurations.testCompile
+        from configurations.testImplementation
         include '*'
     }
     classifier = 'sources'
@@ -88,7 +89,7 @@ task sourcesZip(type: Zip) {
 task binZip(dependsOn: 'jar', type: Zip) {
     from jar.outputs.files
     into('dep') {
-        from configurations.compile
+        from configurations.api
     }
     classifier = 'bin'
 }
@@ -109,56 +110,58 @@ sourceSets {
     }
 }
 
-artifacts {
-    archives jar
-    archives javadocJar
-    archives sourcesJar
-}
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifact javadocJar
+            artifact sourcesJar
 
-signing {
-    sign configurations.archives
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: mavenCentralUrl) {
-                authentication(userName: mavenCentralUser, password: mavenCentralPassword)
-            }
-
-            pom.project {
-                name projectTitle
-                packaging 'jar'
-                description 'Helper for build generator to implement class logic in runtime basing on interface/methods/annotations'
-                url 'https://github.com/xBlackCat/sjpu-rcb'
+            pom {
+                name = projectTitle
+                packaging = 'jar'
+                description = 'Helper for build generator to implement class logic in runtime basing on interface/methods/annotations'
+                url = 'https://github.com/xBlackCat/sjpu-rcb'
 
                 scm {
-                    url 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
-                    connection 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
-                    developerConnection 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
+                    url = 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
+                    connection = 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
+                    developerConnection = 'scm:git@github.com:xBlackCat/sjpu-rcb.git'
                 }
 
                 licenses {
                     license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                        distribution 'repo'
+                        name = 'The Apache Software License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution = 'repo'
                     }
                 }
 
                 developers {
                     developer {
-                        id 'xBlackCat'
-                        name 'Zhukov Alexei'
-                        email 'xblackcat@gmail.com'
+                        id = 'xBlackCat'
+                        name = 'Zhukov Alexei'
+                        email = 'xblackcat@gmail.com'
                     }
                 }
             }
 
         }
     }
+    repositories {
+        mavenLocal()
+        maven {
+            url = mavenCentralUrl
+            credentials {
+                username = mavenCentralUser
+                password = mavenCentralPassword
+            }
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
 }
 
 
